test/functional/run/use_unitialized_var.glu
//
// RUN: not gluc %s -c -o %t 2>&1 | FileCheck -v %s
//

@no_mangling
func memcmp(s1: *Char, s2: *Char, n: Int) -> Int;

@no_mangling
func memcpy(dst: *Char, src: *Char, n: Int) -> *Char;

import std::allocate;
import std::print;

func rfeergerg(machin: Bool) -> Void {
    var x : Int;

    if (machin) {
        x = 0;
    }
    // CHECK: use_unitialized_var.glu:21:11: error: Load from uninitialized memory location
    print(x);
}

func ergfer(machin: Bool) -> Void {
    var x : Int;

    if (machin) {
        x = 0;
    } else {
        x = 1;
    }
    // OK
    print(x);
}

func qewrff(machin: Bool) -> Void {
    var x : Int;

    if (machin) {
        x = 0; // init
    } else {
        x = 1; // init
    }
    x = x + 1; // set
    // OK
    print(x);
}


func rthg(machin: Bool) -> Void {
    var x : Int;

    if (machin) {
        x = 0; // init
    }
    // CHECK: use_unitialized_var.glu:57:7: error: Store to memory location with uncertain initialization
    x = 1;
    print(x);
}


func qewrffasddd(machin: Bool) -> Void {
    var x : Int;

    if (machin) {
        x = 0; // init
    } else {
        x = 1; // init
    }

    if (machin) {
        x = 0; // set
    } else {
        x = 1; // set
    }
    x = x + 1; // set
    // OK
    print(x);
}

func qewrffasddd() -> Void {
    var result: String = "";
    result.data = allocate(1);
    // OK
    result.data[0];
}

func <(lhs: Char, rhs: Char) -> Bool {
    return (lhs as UInt8) < (rhs as UInt8);
}

public func stringToInt(s: String) -> Int {
    var i: Int = 0;
    var result: Int = 0;

    // Skip leading whitespace
    while (i < s.length) {
        i = i + 1;
    }

    // OK
    return result;
}

func asd(s: String) -> Void {
    s.data[0];
}

public func stringIndexOf(i: Int, s: String) -> Int {

    while (i <= s.length) {
        s.data[i];
    }

    return -1;
}

func createStringFromPointer(s: *Char, length: Int, allocated: Bool) -> String {
    return { s, length, allocated };
}

public func stringTrim(s: String) -> String {
    if (s.length == 0) {
        return s;
    }

    var start: Int = 0;
    var end: Int = s.length - 1;

    // Find first non-space character
    while (start <= end && (s.data[start] == " " || s.data[start] == "\n" || s.data[start] == "\t")) {
        start = start + 1;
    }

    // Find last non-space character
    while (end >= start && (s.data[end] == " " || s.data[end] == "\n" || s.data[end] == "\t")) {
        end = end - 1;
    }

    // Create trimmed string
    let newLength: Int = end - start + 1;
    if (newLength <= 0) {
        return createStringFromPointer(null, 0, false);
    }

    var str: *Char = allocate(newLength);
    memcpy(str, &s.data[start], newLength);
    return createStringFromPointer(str, newLength, true);
}

public func +(lhs: String, rhs: String) -> Void {
    var result: *Char = allocate(lhs.length + rhs.length + 1);

    memcpy(&result[lhs.length], rhs.data, rhs.length);
}
